[package]
name = "theme-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0-dev", features = [
    "tokio",
    "lazy",
    "advanced",
    "debug",
    "canvas",
] }

[build-dependencies]
iced_fontello = "0.13"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "283d0e74a8050ea625da25e0b9180b65f11d1843" }