[package]
name = "theme-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0-dev", features = [
    "tokio",
    "lazy",
    "advanced",
    "debug",
    "canvas",
    "image",
    "svg"
] }
iced_runtime = { version = "0.14.0-dev" }
arboard = { version="3.6.0" }
widgets = { git = "https://github.com/A-Disruption/widgets.git"}


[build-dependencies]
iced_fontello = "0.13"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced", branch = "master"}
